// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BonusVideoFormHolder Component tests Default Form Holder state - Form Open Should Properly Mount Form Holder 1`] = `
<BonusVideoFormHolder>
  <div
    id="bonusVideoFormHolder"
  >
    <GridRow>
      <div
        className="row"
      >
        <GridColumn
          computer={14}
          mobile={16}
          tablet={15}
        >
          <div
            className="fourteen wide computer sixteen wide mobile fifteen wide tablet column"
          >
            <Button
              as="button"
              content="Close Form"
              id="bonusVideoFormToggleBtn"
              onClick={[Function]}
            >
              <Ref
                innerRef={
                  Object {
                    "current": <button
                      class="ui button"
                      id="bonusVideoFormToggleBtn"
                    >
                      Close Form
                    </button>,
                  }
                }
              >
                <RefFindNode
                  innerRef={
                    Object {
                      "current": <button
                        class="ui button"
                        id="bonusVideoFormToggleBtn"
                      >
                        Close Form
                      </button>,
                    }
                  }
                >
                  <button
                    className="ui button"
                    id="bonusVideoFormToggleBtn"
                    onClick={[Function]}
                  >
                    Close Form
                  </button>
                </RefFindNode>
              </Ref>
            </Button>
            <BonusVideoForm
              description=""
              handleCreateBonusVideo={[Function]}
              handleUpdateBonusVideo={[Function]}
              vimeoURL=""
              youTubeURL=""
            >
              <div
                className="createProductFormHolder"
              >
                <Form
                  as="form"
                  id="createProductForm"
                >
                  <form
                    className="ui form"
                    id="createProductForm"
                    onSubmit={[Function]}
                  >
                    <FormField>
                      <div
                        className="field"
                      >
                        <label>
                          Video YouTube URL:
                        </label>
                        <input
                          onChange={[Function]}
                          placeholder="YouTube URL here ..."
                          value=""
                        />
                      </div>
                    </FormField>
                    <FormField>
                      <div
                        className="field"
                      >
                        <label>
                          Video Vimeo URL:
                        </label>
                        <input
                          onChange={[Function]}
                          placeholder="Vimeo URL here..."
                          value=""
                        />
                      </div>
                    </FormField>
                    <FormField
                      control={[Function]}
                      id="form-textarea-control-opinion"
                      label="Video Description"
                      onChange={[Function]}
                      placeholder="Video description here..."
                      value=""
                    >
                      <div
                        className="field"
                      >
                        <label
                          htmlFor="form-textarea-control-opinion"
                        >
                          Video Description
                        </label>
                        <TextArea
                          aria-describedby={null}
                          as="textarea"
                          id="form-textarea-control-opinion"
                          onChange={[Function]}
                          placeholder="Video description here..."
                          rows={3}
                          value=""
                        >
                          <Ref
                            innerRef={
                              Object {
                                "current": <textarea
                                  id="form-textarea-control-opinion"
                                  placeholder="Video description here..."
                                  rows="3"
                                />,
                              }
                            }
                          >
                            <RefFindNode
                              innerRef={
                                Object {
                                  "current": <textarea
                                    id="form-textarea-control-opinion"
                                    placeholder="Video description here..."
                                    rows="3"
                                  />,
                                }
                              }
                            >
                              <textarea
                                aria-describedby={null}
                                id="form-textarea-control-opinion"
                                onChange={[Function]}
                                onInput={[Function]}
                                placeholder="Video description here..."
                                rows={3}
                                value=""
                              />
                            </RefFindNode>
                          </Ref>
                        </TextArea>
                      </div>
                    </FormField>
                    <Button
                      as="button"
                      content="Save New Bonus Video"
                      id="bonusVideoFormCreate"
                      onClick={[Function]}
                      type="submit"
                    >
                      <Ref
                        innerRef={
                          Object {
                            "current": <button
                              class="ui button"
                              id="bonusVideoFormCreate"
                              type="submit"
                            >
                              Save New Bonus Video
                            </button>,
                          }
                        }
                      >
                        <RefFindNode
                          innerRef={
                            Object {
                              "current": <button
                                class="ui button"
                                id="bonusVideoFormCreate"
                                type="submit"
                              >
                                Save New Bonus Video
                              </button>,
                            }
                          }
                        >
                          <button
                            className="ui button"
                            id="bonusVideoFormCreate"
                            onClick={[Function]}
                            type="submit"
                          >
                            Save New Bonus Video
                          </button>
                        </RefFindNode>
                      </Ref>
                    </Button>
                  </form>
                </Form>
              </div>
            </BonusVideoForm>
          </div>
        </GridColumn>
      </div>
    </GridRow>
  </div>
</BonusVideoFormHolder>
`;

exports[`BonusVideoFormHolder Component tests Default Form Holder state Should Properly Mount Form Holder 1`] = `
<BonusVideoFormHolder>
  <div
    id="bonusVideoFormHolder"
  >
    <GridRow>
      <div
        className="row"
      >
        <GridColumn
          computer={14}
          mobile={16}
          tablet={15}
        >
          <div
            className="fourteen wide computer sixteen wide mobile fifteen wide tablet column"
          >
            <Button
              as="button"
              content="Open Form"
              id="bonusVideoFormToggleBtn"
              onClick={[Function]}
            >
              <Ref
                innerRef={
                  Object {
                    "current": <button
                      class="ui button"
                      id="bonusVideoFormToggleBtn"
                    >
                      Open Form
                    </button>,
                  }
                }
              >
                <RefFindNode
                  innerRef={
                    Object {
                      "current": <button
                        class="ui button"
                        id="bonusVideoFormToggleBtn"
                      >
                        Open Form
                      </button>,
                    }
                  }
                >
                  <button
                    className="ui button"
                    id="bonusVideoFormToggleBtn"
                    onClick={[Function]}
                  >
                    Open Form
                  </button>
                </RefFindNode>
              </Ref>
            </Button>
          </div>
        </GridColumn>
      </div>
    </GridRow>
  </div>
</BonusVideoFormHolder>
`;
